[package]
name = "mitemp"
version = "0.3.1"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2018"
description = "Read Xiaomi MI Temperature and Humidity Sensor over BLE"
license = "MIT/Apache-2.0"

[dependencies]
btleplug = "0.9.2"
num_enum = "0.5.7"
tokio-stream = "0.1.8"
uuid = "0.8.2"
log = "0.4.16"

[dev-dependencies]
main_error = "0.1"
env_logger = "0.9"
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }