[package]
name = "mitemp"
version = "0.4.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2018"
description = "Read Xiaomi MI Temperature and Humidity Sensor over BLE"
license = "MIT/Apache-2.0"
rust-version = "1.70.0"

[dependencies]
btleplug = "0.11.6"
num_enum = "0.7.3"
tokio-stream = "0.1.8"
uuid = "1.11.0"
tracing = "0.1.40"

[dev-dependencies]
main_error = "0.1"
tracing-subscriber = "0.3.18"
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }